[package]
name = "icedtrain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { git = " https://github.com/iced-rs/iced.git", features = [
	"tokio",
	"debug",
	"image",
	"advanced"
] }
iced_native = "0.10.3"
tokio = { version = "1.28", features = ["full"] }
iced_futures = "0.6.0"
image = { version = "0.24.6", features = ["png"] }
env_logger = "0.10.0"
pipe-trait = "0.4.0"
