[package]
name = "icedtrain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.10", features = ["tokio", "debug", "image", "advanced"] }
iced_native = "0.10.3"
tokio = { version = "1.28", features = ["full"] }
iced_futures = "0.6.0"
image = { version = "0.24.6", features = ["png"] }
env_logger = "0.10.0"
pipe-trait = "0.4.0"
glob = "0.3.1"
once_cell = "1.18.0"
regex = "1.9.1"
quick-xml = "0.30.0"
zbus = { version = "3.12.0", default-features = false, features = ["tokio"] }
anyhow = "1.0.72"
thiserror = "1.0.44"
